--- a/math.html
+++ b/math.html
@@ -572,16 +572,7 @@ function get_maincode(hash) {
 	// FF
 	if (hash == "55b23bcbc0a5f9e6479a219442a753de42945632") {r="F1"}        // FF68-82 64bit Win7 64bit [CONTROL]
 	else if (hash == "387ec24f7d465f6cc8586810ab573d33b4deb1bd") {r="F2"}   // FF60-76 64bit Win7 64bit
-
-
-	else if (hash == "90b975639f11fffdff221f89ffc773b545198cf0") { r="F10"} // Fenix80
- 
-
-	// 32bit FF60
-	// 32bit FF68
-	// 32bit FF80
-
-
+	else if (hash == "90b975639f11fffdff221f89ffc773b545198cf0") { r="F10"} // Fenix80, TBA68 (and therefore FF68)
 	// TB
 	else if (hash == "2665ead0ed40201e071f3a55cafcb4d5de7c655b") { r="F96"} // TB68-78 64bit Win7 64bit
 	else if (hash == "b7971966da5399fec9ff39963080beae71fd1930") { r="F97"} // TB68-78 32bit Win7 64bit
