--- a/math.html
+++ b/math.html
@@ -20,7 +20,7 @@
 			<td>
 				<button onClick="outputMath(`firefox`)">firefox</button>
 				<button onClick="outputMath(`chrome`)">chrome</button>
-				<button onClick="outputMath(`mac`)">mac</button>
+				<button onClick="outputMath(`safari`)">safari</button>
 			</td></tr>
 		<tr><td colspan="3" class="center"></td></tr>
 		<tr><td colspan="2">all</td><td class="c mono" id="hash0"></td></tr>
@@ -68,7 +68,7 @@ var tzpFF = [
 var tzpCHROME = [
 	'-0.37419577499634155','-0.7854805190645291','0.7914463018528903','-0.767224894221913','-0.7415825695514535','0.5403023058681398','0.7086865671674247','-0.7482651726250322','0.9924450321351935','-1','-0.10868049424995659','-0.8913089376870335','-0.7108118501064331','-0.536911695749024','-0.4067775970251724','-0.7017203400855446','0.4362848063618998','-0.6982689820462377','-0.6982689820462377','-0.6534063185820198','0.4537557425982784','0.6459044007438142','0.994076732536068','1.2246467991473532e-16','-0.7181630308570677','-0.7659964138980511','0.9989410140273756','0.10135692924965616','-0.3746357547858202','-0.9892668187780498','0.5086861259107568','-1.2246467991473532e-16','0.6866761546452431','1.6182817135715877','-3.3537128705376014','-1.9222955461799982','-1.9222955461799982','2.5824856130712432'
 ]
-var tzpMAC = [
+var tzpSAFARI = [
 	'-0.3741957749963415','-0.7854805190645292','0.7914463018528903','-0.7672248942219131','-0.7415825695514535','0.5403023058681398','0.7086865671674247','-0.7482651726250322','0.9924450321351935','-1','-0.10868049424995659','-0.8913089376870335','-0.7108118501064331','-0.536911695749024','-0.40677759702517235','-0.7017203400855446','0.4362848063618998','-0.6982689820462377','-0.6982689820462377','-0.6534063185820198','0.4537557425982784','0.6459044007438142','0.994076732536068','1.2246467991473532e-16','-0.7181630308570677','-0.765996413898051','0.9989410140273756','0.10135692924965616','-0.37463575478582023','-0.9892668187780498','0.5086861259107567','-1.2246467991473532e-16','0.686676154645243','1.6182817135715875','-3.353712870537602','-1.922295546179998','-1.922295546179998','2.5824856130712437'
 ]
 var newFF = [
@@ -77,7 +77,7 @@ var newFF = [
 var newCHROME = [
 	'1.4474840516030247','0.7853981633974483','709.889355822726','Infinity','1.811526272460853','1.8115262724608532','0.881373587019543','0.8813735870195432','0.12331227519187199','691.4686750787736','691.4686750787736','1.8622957433108482','1.885022066017804','1.1071487177940904','1.2626272556789115','0.5493061443340548','0.5493061443340548','5e-311','1.0038848218538872','4.641588833612779','1.4645918875615231','0.9924450321351935','-1','-0.10868049424995659','-0.8913089376870335','-0.7108118501064331','-0.536911695749024','-0.4067775970251724','-0.7017203400855446','0.4362848063618998','-0.6982689820462377','-0.6982689820462377','-0.6534063185820198','0.4537557425982784','0.6459044007438142','1.5430806348152437','1.5430806348152437','11.591953275521519','11.591953275521519','9.199870313877772e+307','1.0469199669023138e+308','1.718281828459045','22.140692632779267','1.1308844209474893','23.140692632779267','9.539392014169456','9.539392014169458','8.288489826731116e+38','8.288489826731116e+38','100.14767208675259','100.14767208675259','101.76102278593319','101.76102278593319','100.0096085986525','100.0096085986525','100.01040630344929','100.01040630344929','100.00999950004999','100.00999950004999','100.0024999687508','100.0024999687508','100.00377216279416','100.00377216279416','-2.0955709236097197','1.1447298858494002','0.11600367575630613','0.11600367575630613','1.4210804127942926','1.4210804127942926','-0.9100948885606021','-0.9100948885606022','0.4971498726941338','0.49714987269413385','0.4342944819032518','0.4342944819032518','1.9657733989455068','1.965773398945507','-0.1591745389548616','-0.1591745389548616','0.8822181462033634','0.8822181462033635','0.15917453895486158','0.15917453895486158','1.792642994534448','1.792642994534448','-0.36221568869946325','-0.3622156886994632','0.4828823513147936','0.4828823513147936','-0.15051499783199057','-0.15051499783199057','0.1505149978319906','0.1505149978319906','0.1505149978319906','0.1505149978319906','0.994076732536068','1.2246467991473532e-16','-0.7181630308570677','-0.7659964138980511','0.9989410140273756','0.10135692924965616','-0.3746357547858202','-0.9892668187780498','1.1752011936438014','1.1752011936438014','11.548739357257748','11.548739357257748','7.544137102816975','7.544137102816975','0.75','0.75','1.9978980091062795','1.9978980091062797','9.199870313877772e+307','Infinity','0.44807597941469024','0.4480759794146903','0.7675231451261164','0.7675231451261164','1.935066822174357','1.9350668221743568','1.0469199669023138e+308','Infinity','0.3507135583350036','1.7724538509055159','0.5086861259107568','-1.2246467991473532e-16','0.6866761546452431','1.6182817135715877','-3.3537128705376014','-1.9222955461799982','-1.9222955461799982','2.5824856130712432','0.12238344189440875','0.12238344189440872','0.99627207622075','0.9962720762207501','1.022089333584519e+91','1.9275814160560204e-50','3.7200759760208555e-44','8269017203802394','6.003867926738829e-37','1.20933355845501e-16','1.6655929347585958e+36','1125899906842616.2','8.881784197001191e-16'
 ]
-var newMAC = [
+var newSAFARI = [
 	'1.4474840516030245','0.7853981633974483','709.889355822726','Infinity','1.811526272460853','1.8115262724608532','0.8813735870195432','0.8813735870195432','0.12331227519187199','691.4686750787736','691.4686750787736','1.8622957433108482','1.885022066017804','1.1071487177940906','1.2626272556789115','0.5493061443340549','0.5493061443340549','5e-311','1.0038848218538872','4.641588833612779','1.4645918875615234','0.9924450321351935','-1','-0.10868049424995659','-0.8913089376870335','-0.7108118501064331','-0.536911695749024','-0.40677759702517235','-0.7017203400855446','0.4362848063618998','-0.6982689820462377','-0.6982689820462377','-0.6534063185820198','0.4537557425982784','0.6459044007438142','1.5430806348152437','1.5430806348152437','11.591953275521519','11.591953275521519','9.199870313877772e+307','1.0469199669023138e+308','1.7182818284590453','22.140692632779267','1.1308844209474893','23.140692632779267','9.539392014169456','9.539392014169458','8.288489826731116e+38','8.288489826731116e+38','100.14767208675259','100.14767208675259','101.76102278593319','101.76102278593319','100.0096085986525','100.0096085986525','100.01040630344929','100.01040630344929','100.00999950004999','100.00999950004999','100.0024999687508','100.0024999687508','100.00377216279416','100.00377216279416','-2.0955709236097197','1.1447298858494002','0.11600367575630613','0.11600367575630613','1.4210804127942926','1.4210804127942926','-0.9100948885606021','-0.9100948885606022','0.49714987269413385','0.49714987269413385','0.4342944819032518','0.4342944819032518','1.965773398945507','1.965773398945507','-0.1591745389548616','-0.1591745389548616','0.8822181462033635','0.8822181462033635','0.15917453895486158','0.15917453895486158','1.7926429945344482','1.792642994534448','-0.36221568869946325','-0.3622156886994632','0.48288235131479357','0.4828823513147936','-0.15051499783199057','-0.15051499783199057','0.15051499783199063','0.1505149978319906','0.15051499783199063','0.1505149978319906','0.994076732536068','1.2246467991473532e-16','-0.7181630308570677','-0.765996413898051','0.9989410140273756','0.10135692924965616','-0.37463575478582023','-0.9892668187780498','1.1752011936438014','1.1752011936438014','11.548739357257746','11.548739357257748','7.544137102816975','7.544137102816975','0.75','0.75','1.9978980091062795','1.9978980091062797','9.199870313877772e+307','Infinity','0.44807597941469024','0.4480759794146903','0.7675231451261164','0.7675231451261164','1.9350668221743568','1.9350668221743568','1.0469199669023138e+308','Infinity','0.3507135583350036','1.7724538509055159','0.5086861259107567','-1.2246467991473532e-16','0.686676154645243','1.6182817135715875','-3.353712870537602','-1.922295546179998','-1.922295546179998','2.5824856130712437','0.12238344189440876','0.12238344189440872','0.99627207622075','0.9962720762207501','1.022089333584519e+91','1.9275814160560206e-50','3.7200759760208555e-44','8269017203802394','6.003867926738829e-37','1.20933355845501e-16','1.6655929347585955e+36','1125899906842616.2','8.881784197001191e-16'
 ]
 
@@ -91,8 +91,8 @@ function build_arrays(engine) {
 		c = tzpFF
 	} else if (engine == "chrome") {
 		c = tzpCHROME
-	} else if (engine == "mac") {
-		c = tzpMAC
+	} else if (engine == "safari") {
+		c = tzpSAFARI
 	}
 	tzpfns = [
 		// original TZP 8
@@ -141,8 +141,8 @@ function build_arrays(engine) {
 		c = newFF
 	} else if (engine == "chrome") {
 		c = newCHROME
-	} else if (engine == "mac") {
-		c = newMAC
+	} else if (engine == "safari") {
+		c = newSAFARI
 	}
 	newfns = [
 		// [item, function, value, description, control, poly1 control, poly2 control]
@@ -444,16 +444,14 @@ function get_results(type) {
 				display.push(sColor.trim() + strDemarc +"<br>"+ fnName.toUpperCase() + sc)
 			}
 		} 
-
 		display.push(kpad+": "+ sColor + fnValue.padEnd(vPad) + sc + ": " +fnResult)
-
 		// remember last function
 		prevFn = fn[1]
 	}
 	// generate control lists
 	//console.log("CONTROL LIST: " + type + "\n" + generate.join(","))
 
-	// numbers
+	// NUMBERS
 	numbers.sort((a,b) => a-b)
 	numbers = numbers.filter(function(item, position) {return numbers.indexOf(item) === position})
 	numbers.sort((a,b) => a-b)
@@ -465,7 +463,7 @@ function get_results(type) {
 		document.getElementById(type+"num").innerHTML = numstr
 	}
 
-	// diffs
+	// DIFFS
 	function output_diffs(array, type) {
 		let output = []
 		if (array.length > 0) {
@@ -485,10 +483,9 @@ function get_results(type) {
 		}
 	}
 
-	// hashes
+	// HASHES
 	if (type == "tzp") {
-
-		// OLD HASH
+		// old tzp hash
 		let tzptemp = math1.slice(0,8)
 		let tzparray1 = []
 		for(let i=0; i < tzptemp.length; i++) {
@@ -497,39 +494,20 @@ function get_results(type) {
 		}
 		let tzphash1 = sha1(tzparray1.join("-")) // use "-" to match TZP
 		let tzpcode1 = ""
-		if (isFF) {
-			// known FF hashes
-			if (tzphash1 == "46f7c2bbe55a2cd28252d059604f8c3bac316c23") {tzpcode1="A"}
-			else if (tzphash1 == "8464b989070dcff22c136e4d0fe21d466b708ece") {tzpcode1="B"}
-			else if (tzphash1 == "97eee44856b0d2339f7add0d22feb01bcc0a430e") {tzpcode1="C"}
-			else if (tzphash1 == "96895e004b623552b9543dcdc030640d1b108816") {tzpcode1="D"}
-			else if (tzphash1 == "06a01549b5841e0ac26c875b456a33f95b5c5c11") {tzpcode1="E"}
-			else if (tzphash1 == "ae434b101452888b756da5916d81f68adeb2b6ae") {tzpcode1="F"}
-			else if (tzphash1 == "19df0b54c852f35f011187087bd3a0dce12b4071") {tzpcode1="G"}
-			else if (tzphash1 == "8ee641f01271d500e5c1d40e831232214c0bbbdc") {tzpcode1="H"}
-			if (tzpcode1 == "") {
-				tzpcode1 = zNEW
-			} else {
-				tzpcode1 = s12 + "["+ tzpcode1 +"]" + sc
-			}
-		}
-
-		// NEW HASH
+		if (isFF) {tzpcode1 = get_code("original", tzphash1)}
+		// new hash
 		let tzparray2 = math1.slice(9,math1.length)
 		let tzphash2 = sha1(tzparray2.join()) // the rest
 		let tzpcode2 = ""
-		if (isFF) {
-			tzpcode2 = get_code(type, tzphash2)
-		}
+		if (isFF) {tzpcode2 = get_code(type, tzphash2)}
 		tzpdisplay.push("tzp: " + tzphash1 + (isFF ? tzpcode1 : ""))
 		tzpdisplay.push("new: " + tzphash2 + (isFF ? tzpcode2 : ""))
 		tzpdisplay.push("nos: " + numstr)
 		tzpdisplay = tzpdisplay.concat(display)
-
+		// short report
 		report.push("tzp: " + tzphash1 + (isFF ? tzpcode1 : ""))
 		report.push("new: " + tzphash2 + (isFF ? tzpcode2 : ""))
 		report.push("nos: " + numstr)
-
 	} else {
 		// hashes
 		let hash1 = sha1(math1.join())
@@ -537,32 +515,24 @@ function get_results(type) {
 		let math3 = math1.concat(math2)
 		let hash0 = sha1(math3.join())
 		let maincode = get_code(type,hash0)
-
-		//ToDo: assign short codes
-		dom.hash1.innerHTML = hash1 //+ sColor +"["+ math1.length +"]"+sc
-		if (math2.length > 0) {
-			dom.hash2.innerHTML = hash2 //+ sColor +"["+ math2.length +"]"+sc
-		} else {
-			dom.hash2.innerHTML = "none run"
-		}
+		dom.hash1.innerHTML = hash1
+		if (math2.length > 0) {dom.hash2.innerHTML = hash2} else {dom.hash2.innerHTML = "none run"}
 		dom.hash0.innerHTML = hash0 + maincode
-
+		// big data
 		newdisplay.push(" a11: " + hash0 + maincode)
 		newdisplay.push("func: " + hash1)
 		newdisplay.push("poly: " + hash2)
 		newdisplay.push(" nos: " + numstr)
 		newdisplay = newdisplay.concat(display)
-
+		// short report
 		report.push(" a11: " + hash0 + maincode)
 		report.push(" nos: " + numstr)
-
 		// diffs
 		output_diffs(diffs, 0)
 		output_diffs(fnmatch, 1)
 		output_diffs(polymatch, 2)
 	}
-
-	// display
+	// OUTPUT
 	if (type == "new") {
 		dom.mathdata.innerHTML = tzpdisplay.join("<br>") + newdisplay.join("<br>")
 		dom.report.innerHTML = report.join("<br>")
@@ -571,76 +541,77 @@ function get_results(type) {
 
 function get_code(type, hash) {
 	let r = "", color = s3
-	// template
-	//else if (hash == "") {r=""}
-
-	// MAIN TEST
-	if (type == "new") {
-		// FF
-			// windows
-		     if (hash == "55b23bcbc0a5f9e6479a219442a753de42945632") {r="F1" } // Win7 64bit: FF68-82 64bit [CONTROL]
-		else if (hash == "387ec24f7d465f6cc8586810ab573d33b4deb1bd") {r="F2" } // Win7 64bit: FF60-76 64bit
-		else if (hash == "b028a9521f53fe3cd88f66ebb5b3b86fa32876cd") {r="F3" } // Win7 64bit: FF60-67 32bit
-		else if (hash == "3de2c514f27f8342093010267f3f132b70f15c09") {r="F4" } // Win7 64bit: FF68-82 32bit
-			// android
-		else if (hash == "90b975639f11fffdff221f89ffc773b545198cf0") {r="F10"} // aarch64: Fenix80, TBA68 (and therefore FF68)
-			// linux
-		else if (hash == "28e670c427690c9e06fee99660e42cd44face90d") {r="F20"} // Linux64 (homebrew): FF82 64bit
-			// mac
-		else if (hash == "1bd1a1407d2a695d9adda3159cadbdcb525fe702") {r="F30"} // macOS: FF81/TB78
-			// TB
-		else if (hash == "2665ead0ed40201e071f3a55cafcb4d5de7c655b") {r="F96"} // Win7 64bit: TB68-78 64bit
-		else if (hash == "b7971966da5399fec9ff39963080beae71fd1930") {r="F97"} // Win7 64bit: TB68-78 32bit
-		else if (hash == "ab9409fb13ee526847ffa797a4696f139e5922cf") {r="F98"} // Win7 64bit: TB60 64bit
-		else if (hash == "21e7548068a0aef1cfe56c6e58ca6f8524da581d") {r="F99"} // Win7 64bit: TB60 32bit
-		// CHROME
-		else if (hash == "0434f008dc65d44cd67a49656aa21f38e8e93a6e") { r="C1"} // Win7 64bit: Chrome72-85 64+32bit
-		// SAFARI
-
-	// TZP EXTENDED
+	// ORIGINAL known hashes (TZP ECMA 1st Edition)	
+	if (type == "original") {
+					 if (hash == "46f7c2bbe55a2cd28252d059604f8c3bac316c23") {r="A"} // windows
+			else if (hash == "8464b989070dcff22c136e4d0fe21d466b708ece") {r="B"} // windows
+			else if (hash == "97eee44856b0d2339f7add0d22feb01bcc0a430e") {r="C"} // windows
+			else if (hash == "96895e004b623552b9543dcdc030640d1b108816") {r="D"} // linux
+			else if (hash == "06a01549b5841e0ac26c875b456a33f95b5c5c11") {r="E"} // mac
+			else if (hash == "ae434b101452888b756da5916d81f68adeb2b6ae") {r="F"} // android
+			else if (hash == "19df0b54c852f35f011187087bd3a0dce12b4071") {r="G"} // linux
+			else if (hash == "8ee641f01271d500e5c1d40e831232214c0bbbdc") {r="H"} // windows
+			if (r == "") {r = zNEW} else {r = s12+"["+ r +"]"+sc}
+			return r
 	} else {
+
+		// TZP EXTENDED
+		if (type == "tzp") {
 			color = s12
-			// known FF hashes
-			if      (hash == "da51d38c6fcfc30599124515a36779c0d021a58d") {r="A"}
-			else if (hash == "ee9207e29c9d8ddb58d77a447a112854dec5ba50") {r="B"}
-			else if (hash == "2f3b87caa7d3b56b4b8ffc74149ed855ba64b7a2") {r="C"}
+			// first match to known FF hashes from TZP gets same letter
+			if      (hash == "da51d38c6fcfc30599124515a36779c0d021a58d") {r="A"} // windows
+			else if (hash == "ee9207e29c9d8ddb58d77a447a112854dec5ba50") {r="B"} // windows
+			else if (hash == "2f3b87caa7d3b56b4b8ffc74149ed855ba64b7a2") {r="C"} // windows
 			else if (hash == "c88399018563b7ea79c6b5184f0690c982f82084") {r="E"} // macOS: FF81/TB78
 			else if (hash == "ace0a461947f4a157233e001b8d18d79113fa825") {r="F"} // aarch64 + pixel3: Fenix
 			else if (hash == "99502fa552f399f8d9151e7fbfaf12ef905de3a3") {r="G"} // Linux64 (homebrew): FF82 64bit
-			// new to TZP
+			// then it's new to TZP
 			else if (hash == "25e085626b57813701d5f2f4c33029a1e4c56f27") {r="Z"} // TB60 32bit Win7 64bit
-			// notation
+
+		} else if (type == "new") {
+		// MAIN TEST
+			// FF
+				// windows
+					 if (hash == "55b23bcbc0a5f9e6479a219442a753de42945632") {r="F1" } // Win7 64bit: FF68-82 64bit [CONTROL]
+			else if (hash == "387ec24f7d465f6cc8586810ab573d33b4deb1bd") {r="F2" } // Win7 64bit: FF60-76 64bit
+			else if (hash == "b028a9521f53fe3cd88f66ebb5b3b86fa32876cd") {r="F3" } // Win7 64bit: FF60-67 32bit
+			else if (hash == "3de2c514f27f8342093010267f3f132b70f15c09") {r="F4" } // Win7 64bit: FF68-82 32bit
+				// android
+			else if (hash == "90b975639f11fffdff221f89ffc773b545198cf0") {r="F10"} // aarch64: Fenix80, TBA68 (and therefore FF68)
+				// linux
+			else if (hash == "28e670c427690c9e06fee99660e42cd44face90d") {r="F20"} // Linux64 (homebrew): FF82 64bit
+				// mac
+			else if (hash == "1bd1a1407d2a695d9adda3159cadbdcb525fe702") {r="F30"} // macOS: FF81/TB78
+				// TB
+			else if (hash == "2665ead0ed40201e071f3a55cafcb4d5de7c655b") {r="F96"} // Win7 64bit: TB68-78 64bit
+			else if (hash == "b7971966da5399fec9ff39963080beae71fd1930") {r="F97"} // Win7 64bit: TB68-78 32bit
+			else if (hash == "ab9409fb13ee526847ffa797a4696f139e5922cf") {r="F98"} // Win7 64bit: TB60 64bit
+			else if (hash == "21e7548068a0aef1cfe56c6e58ca6f8524da581d") {r="F99"} // Win7 64bit: TB60 32bit
+			// CHROME
+			else if (hash == "0434f008dc65d44cd67a49656aa21f38e8e93a6e") { r="C1"} // Win7 64bit: Chrome72-85 64+32bit
+			// SAFARI
+		}
+		// NEW
+		if (r == "") {r = zNEW} else {r = color+"["+ r +"]"+sc}
+		return r
 	}
-	// NEW
-	if (r == "") {r = zNEW} else {r = color+"["+ r +"]"+sc}
-	return r
 }
 
 function outputMath(control) {
 	// clear everything
 	let items = document.getElementsByClassName("c mono")
 	for (let i=0; i < items.length; i++) {items[i].textContent = ""}	
-
-	// controlnames
-	if (control == "firefox") {
-		controlname = "Firefox 78 64bit on Windows 64bit"
-	} else if (control == "chrome") {
-		controlname = "Chrome 85 64bit on Windows 64bit"
-	} else if (control == "mac") {
-		controlname = "Safari 13.0.5 on MacOS Catalina [VM 64bit on Windows 10 64bit]"
-	}
+	// controlname
+				if (control == "firefox") {controlname = "Firefox 78 64bit on Windows 64bit"
+	} else if (control == "chrome") {controlname = "Chrome 85 64bit on Windows 64bit"
+	} else if (control == "safari") {controlname = "Safari 13.0.5 on macOS Catalina [VM 64bit on Windows 10 64bit]"}
 	dom.controlname = controlname
-
-	// build tzpfns and newfns
+	// build arrays & run
 	build_arrays(control)
-	// run
 	get_results("tzp")
 	get_results("new")
-
 }
-
 if ("undefined" != typeof InstallTrigger) {isFF = true}
-
 
 </script>
 </body>
