--- a/math.html
+++ b/math.html
@@ -394,7 +394,7 @@ function get_results() {
 		prevFn = fn[1]
 	}
 	// generate control lists
-	console.log("CONTROL LIST:\n " + generate.join(","))
+	//console.log("CONTROL LIST:\n " + generate.join(","))
 
 	// NUMBER+NAME DUPE CHECK
 	numberchk = numberchk.filter(function(item, position) {return numberchk.indexOf(item) === position})
@@ -489,8 +489,6 @@ function get_code(hash) {
 	else if (hash == "5c4a31fca60d278930c82fc0a3a1e458fa6ce20a") {r="F2" } // Win7 64bit: FF68-82 32bit
 	else if (hash == "6b0b141fe76e4091700552577a28ad78343fe72d") {r="F3" } // Win7 64bit: FF60-67 64bit [obsolete versions]
 	else if (hash == "9ae3368c45a88ef832f9f53ae45049479cf2d8c6") {r="F4" } // Win7 64bit: FF60-67 32bit [obsolete versions]
-
-
 		// android
 	else if (hash == "12c96ad6a0f2130e32dbc11b2ec9bb0d652db243") {r="F10"} // aarch64: Fenix80, TBA68 (and therefore FF68)
 		// linux
