--- a/math.html
+++ b/math.html
@@ -492,7 +492,7 @@ function get_code(hash) {
 		// android
 	else if (hash == "12c96ad6a0f2130e32dbc11b2ec9bb0d652db243") {r="F10"} // aarch64: Fenix80, TBA68 (and therefore FF68)
 		// linux
-	else if (hash == "retest1") {r="F20"} //
+	else if (hash == "d3611d97786dd93f9865763121feed602737aaf7") {r="F20"} // Linux 64bit: Fedora v32: FF80 64bit, TB68 64bit
 		// mac
 	else if (hash == "retest2") {r="F30"} //
 		// TB
