--- a/math.html
+++ b/math.html
@@ -401,7 +401,7 @@ function get_results() {
 		prevFn = fn[1]
 	}
 	// generate control lists
-	//console.log("CONTROL LIST:\n " + generate.join(","))
+	console.log("CONTROL LIST:\n " + generate.join(","))
 
 	// NUMBER+NAME DUPE CHECK
 	numberchk = numberchk.filter(function(item, position) {return numberchk.indexOf(item) === position})
