--- a/math.html
+++ b/math.html
@@ -495,7 +495,7 @@ function get_code(hash) {
 	else if (hash == "06f9ca0df07d4836116143158b670c9d3a417cd4") {r="F3"} // Win7 64bit: TB68-78 64bit
 	else if (hash == "dd277bcf4a12289404b0aab1ae43be060be5a12a") {r="F4"} // Win7 64bit: TB68-78 32bit
 		// android
-	else if (hash == "e") {r="F20"} // aarch64: Fenix80, TBA68 (and therefore FF68)
+	else if (hash == "571b9a318869bd09dab3fd83fd88883a66188011") {r="F20"} // aarch64: Fenix80, TBA68 (and therefore FF68)
 		// linux
 	else if (hash == "f") {r="F30"} // Linux 64bit: Fedora v32, Debian: FF80 64bit, TB68 64bit
 	else if (hash == "g") {r="F31"} // Linux 64bit: Mint: FF78 64bit
