--- a/math.html
+++ b/math.html
@@ -495,11 +495,22 @@ function get_code(hash) {
 	else if (hash == "d9e8b78b68a5d1086af27ceec9315f0797ccec7c") {r="F2"} // Win7 64bit: FF68-82 32bit
 	else if (hash == "06f9ca0df07d4836116143158b670c9d3a417cd4") {r="F3"} // Win7 64bit: TB68-78 64bit
 	else if (hash == "dd277bcf4a12289404b0aab1ae43be060be5a12a") {r="F4"} // Win7 64bit: TB68-78 32bit
+
+		// pending windows10 VM and windows machine no 2 tests
+		// rampaa
+	//else if (hash == "b0130c424be28aac4ed155c679c9baf951349b75") {r="something"} // Win10 64bit: FF80 64bit
+	// hash: b0130c424be28aac4ed155c679c9baf951349b75 [NEW]
+	// func: e8dd64a68e81d54fbaab58bd3b48cbe2179f6587
+	// poly: 0cde3749d8f342c858af1eef6b48f2e2be985440
+	//  cos: 5, 7, 14, 16, 17, 18
+	//  sin: 14 
+	//  tan: 12
+
 		// android
-	else if (hash == "571b9a318869bd09dab3fd83fd88883a66188011") {r="F20"} // aarch64: Fenix80, TBA68 (and therefore FF68)
+	else if (hash == "571b9a318869bd09dab3fd83fd88883a66188011") {r="F20"} // aarch64
 		// linux
-	else if (hash == "e6c7b364678e8ecec909088314318acb8430ee47") {r="F30"} // Linux 64bit: Debian Buster: FF80 64bit
-	else if (hash == "g") {r="F31"} // Linux 64bit: 
+	else if (hash == "e6c7b364678e8ecec909088314318acb8430ee47") {r="F30"} // Linux 64bit
+	else if (hash == "05ea8b9bed51553711e3bbaa552449d8ea40c4be") {r="F31"} // Linux 64bit
 		// mac
 	else if (hash == "retest") {r="F50"} // macOS
 		// TB
