--- a/extra.html
+++ b/extra.html
@@ -27,7 +27,7 @@
 
 	<table>
 		<tr><td><a anchor="top"><h2>TorZillaPrint: Extra Tests</h2></td></tr>
-		<tr><td class="blurb"><a class="blue" href="TorZillaPrint.html">return to the main test</a></td></tr>
+		<tr><td class="blurb"><a class="blue" href="tzp.html">return to the main test</a></td></tr>
 	</table>
 
 	<!-- screen.js -->
